# oceans-llm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PLAN-boring-avatars.md  README.md  cliff.toml  cog.toml  compose.local.yaml  gateway.db  gateway.prod.yaml  gateway.yaml  mise.toml  package-lock.json  package.json  pitchfork.toml  release.config.cjs
crates/admin-ui/: Cargo.toml
crates/admin-ui/src/: lib.rs  proxy.rs
crates/admin-ui/web/: .oxfmtrc.json  .oxlintrc.json  AGENTS.md  Dockerfile  components.json  package.json  playwright.config.ts  server.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
crates/admin-ui/web/e2e/: admin-auth.e2e.ts  admin-session.ts  env.ts  gateway-contract.e2e.ts  run-playwright.mjs
crates/admin-ui/web/src/: routeTree.gen.ts  router.tsx
crates/code-mode-guest/: Cargo.toml  build-guest.sh
crates/code-mode-guest/src/: lib.rs  prelude.js
crates/gateway/: Cargo.toml  Dockerfile
crates/gateway-code-mode-wasmtime/: Cargo.toml
crates/gateway-code-mode-wasmtime/guest/: code_mode_guest.wasm
crates/gateway-code-mode-wasmtime/src/: lib.rs  wasi_stubs.rs
crates/gateway-code-mode-wasmtime/tests/: sandbox.rs
crates/gateway-mcp/: Cargo.toml
crates/gateway-mcp/src/: lib.rs  server.rs
crates/gateway-providers/: Cargo.toml
crates/gateway-providers/src/: bedrock.rs  http.rs  lib.rs  openai_compat.rs  streaming.rs  token.rs  vertex.rs
crates/gateway-providers/src/bedrock/: eventstream.rs  mod.rs  response.rs
crates/gateway-service/: Cargo.toml
crates/gateway-service/data/: pricing_catalog_fallback.json  recommended_mcp_servers.json
crates/gateway-service/src/: admin_api_keys.rs  admin_models.rs  authenticator.rs  budget_alerts.rs  budget_guard.rs  budget_scopes.rs  icon_identity.rs  lib.rs  mcp_access.rs  mcp_catalog.rs  mcp_code_mode.rs  mcp_credentials.rs  mcp_gateway.rs  mcp_invocation_logging.rs  mcp_registry.rs  mcp_token_overhead.rs  mcp_upstream_auth.rs  model_access.rs  model_resolution.rs  pricing_catalog.rs  redaction.rs  request_logging.rs  review_agent.rs  route_planner.rs  secret_storage.rs  service.rs
crates/gateway-store/: Cargo.toml  README.md  mise.toml
crates/gateway-store/migrations/: V10__model_aliases.sql  V11__request_log_resolved_model.sql  V12__team_budgets_and_spend_reporting.sql  V13__request_log_payloads_and_indexes.sql  V14__budget_alerts_and_monthly_cadence.sql  V15__request_log_tags.sql  V16__request_log_metadata_cleanup.sql  V17__baseline.sql  V18__route_compatibility_profiles.sql  V19__request_log_attempts.sql  V1__init.sql  V20__request_log_tool_cardinality.sql  V21__request_log_agent_harness.sql  V22__mcp_tool_invocations.sql  V23__service_accounts.sql  V24__identity_entity_tags.sql  V25__oidc_sso_hardening.sql  V26__oauth_providers_and_github_sso.sql  V27__external_mcp_registry.sql  V28__generic_budget_scopes.sql  V29__mcp_tool_access_and_token_overhead.sql  V2__audit_baseline.sql  V30__mcp_aggregate_sessions.sql  V31__mcp_upstream_credential_bindings.sql  V33__oauth_provider_sso_email_verification.sql  V34__review_agent.sql  V35__api_key_model_grant_mode.sql  V35__managed_api_key_secrets.sql  V3__identity_foundation.sql  V4__money_fixed_point.sql  V5__pricing_catalog_cache.sql  V6__identity_onboarding.sql  V7__user_password_rotation.sql  V8__request_log_payloads.sql  V8__usage_ledger_and_model_pricing.sql
crates/gateway-store/migrations/postgres/: V11__request_log_resolved_model.sql  V12__team_budgets_and_spend_reporting.sql  V13__request_log_payloads_and_indexes.sql  V14__budget_alerts_and_monthly_cadence.sql  V15__request_log_tags.sql  V16__request_log_metadata_cleanup.sql  V17__baseline.sql  V19__request_log_attempts.sql  V1__init.sql  V20__request_log_tool_cardinality.sql  V22__mcp_tool_invocations.sql  V23__service_accounts.sql  V25__oidc_sso_hardening.sql  V26__oauth_providers_and_github_sso.sql  V27__external_mcp_registry.sql  V28__generic_budget_scopes.sql  V29__mcp_tool_access_and_token_overhead.sql  V2__audit_baseline.sql  V30__mcp_aggregate_sessions.sql  V31__mcp_upstream_credential_bindings.sql  V32__mcp_code_mode_invocation_linkage.sql  V32__oauth_provider_allowed_email_domains.sql  V33__oauth_provider_sso_email_verification.sql  V34__review_agent.sql  V35__api_key_model_grant_mode.sql  V35__managed_api_key_secrets.sql  V3__identity_foundation.sql  V4__money_fixed_point.sql  V5__pricing_catalog_cache.sql  V6__identity_onboarding.sql  V7__user_password_rotation.sql  V8__usage_ledger_and_model_pricing.sql  V9__model_route_capabilities.sql
crates/gateway-store/src/: any_store_mcp_access.rs  any_store_mcp_aggregate_sessions.rs  any_store_mcp_credentials.rs  any_store_mcp_registry.rs  any_store_mcp_token_overhead.rs  any_store_review_agent.rs  lib.rs  libsql_store.rs  migrate.rs  migration_registry.rs  postgres_store.rs  seed.rs  shared.rs  store.rs
crates/gateway-store/src/libsql_store/: api_keys.rs  budget_alerts.rs  budgets.rs  identity.rs  mcp_access.rs  mcp_aggregate_sessions.rs  mcp_credentials.rs  mcp_registry.rs  mcp_token_overhead.rs  mcp_tool_invocations.rs  mod.rs  models.rs  pricing_catalog.rs  providers.rs  request_logs.rs  review_agent.rs  seed.rs  support.rs
crates/gateway-store/src/postgres_store/: api_keys.rs  budget_alerts.rs  budgets.rs  identity.rs  mcp_access.rs  mcp_aggregate_sessions.rs  mcp_credentials.rs  mcp_registry.rs  mcp_token_overhead.rs  mcp_tool_invocations.rs  mod.rs  models.rs  pricing_catalog.rs  providers.rs  request_logs.rs  review_agent.rs  seed.rs  support.rs
crates/gateway/openapi/: admin-api.json
crates/gateway/src/: cli.rs  config.rs  email.rs  lib.rs  main.rs  observability.rs  request_log_purge.rs
crates/gateway/src/config/: providers.rs
crates/gateway/src/http/: admin_auth.rs  admin_contract.rs  anthropic_stream.rs  api_keys.rs  error.rs  focus_export.rs  handlers.rs  identity.rs  identity_lifecycle.rs  identity_views.rs  mcp_gateway.rs  mcp_registry.rs  mod.rs  models.rs  observability.rs  request_tags.rs  review_agent.rs  spend.rs  state.rs
(+365 files in other folders)
