[workspace]
members = [
    "crates/admin-ui",
    "crates/gateway",
    "crates/gateway-core",
    "crates/gateway-providers",
    "crates/gateway-service",
    "crates/gateway-store",
]
resolver = "2"

[workspace.dependencies]
admin-ui = { path = "crates/admin-ui" }
gateway-core = { path = "crates/gateway-core" }
gateway-providers = { path = "crates/gateway-providers" }
gateway-service = { path = "crates/gateway-service" }
gateway-store = { path = "crates/gateway-store" }
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
futures-core = "0.3"
futures-util = "0.3"
http = "1"
itertools = "0.14"
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "pool", "smtp-transport", "tokio1", "tokio1-rustls-tls"] }
libsql = "0.9"
opentelemetry = { version = "0.31", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics", "trace"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "rt-tokio", "trace"] }
rand = "0.8"
refinery = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["request-id", "trace", "util"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
utoipa = { version = "5", features = ["axum_extras", "time", "uuid"] }
utoipa-axum = "0.2"
url = "2"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
