[package]
name = "gateway-mcp"
version = "0.10.1"
edition = "2024"

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
url.workspace = true
futures-util.workspace = true

[dev-dependencies]
tokio.workspace = true
