[package]
name = "gateway-providers"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
gateway-core.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
axum.workspace = true
tokio.workspace = true
