[package]
name = "gateway-providers"
version = "0.3.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
async-stream = "0.3"
bytes.workspace = true
futures-util.workspace = true
gateway-core.workspace = true
jsonwebtoken = "9"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
serial_test = "3"
tempfile = "3"
tokio.workspace = true
