[package]
name = "gateway-service"
version = "0.9.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
async-trait.workspace = true
base64.workspace = true
gateway-core.workspace = true
gateway-client-config.workspace = true
gateway-mcp.workspace = true
itertools.workspace = true
percent-encoding.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
time.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
axum.workspace = true
