[package]
name = "gateway-store"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
gateway-core.workspace = true
libsql.workspace = true
refinery.workspace = true
serde_json.workspace = true
time.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile = "3"
serial_test = "3"
