[package]
name = "gateway-store"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
gateway-core.workspace = true
libsql.workspace = true
refinery.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
time.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile = "3"
serial_test = "3"
url.workspace = true
