[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
admin-ui = { path = "../admin-ui" }
axum = "0.8"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
