[package]
name = "gateway"
version = "0.2.0"
edition = "2024"

[dependencies]
admin-ui.workspace = true
anyhow.workspace = true
axum.workspace = true
futures-util.workspace = true
gateway-core.workspace = true
gateway-providers.workspace = true
gateway-service.workspace = true
gateway-store.workspace = true
http.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
libsql.workspace = true
tower = { workspace = true, features = ["util"] }
tempfile = "3"
serial_test = "3"
